google sire verification in_config.yml file

--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ name                     : "mean9"
 description              : "Personal blog"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : https://mean9park.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : /assets/images/crow.png # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : /assets/images/full_crop.png # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -71,7 +71,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : 9FsWnWtm2Y0-_oZLmhS4SPkB97jzRscquVhfbBHdX4k
 bing_site_verification   :
 naver_site_verification  :
 yandex_site_verification :
@@ -94,17 +94,18 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          :
+    stream_id            : "G-RBCGXDNLVT"
     anonymize_ip         : # true, false (default)
 
 
 # Site Author
 author:
   name             : "MK"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am a **student**"
+  avatar           : "/assets/images/crow.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "AI Accelerator"
   location         : "Seoul"
   email            :
   links:
@@ -279,9 +280,12 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
+      toc:
+      sidebar:
+        nav: "docs"
 
   # _docs
   #  - scope:
