--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "mean9"
 description              : "Personal blog"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : https://mean9park.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : mean9park/mean9park.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : /assets/images/full_crop.png # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
