--- a/_config.yml
+++ b/_config.yml
@@ -102,9 +102,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "MK"
+  name             : "AI Accelerator & Memory Architecture"
   avatar           : "/assets/images/crow.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "AI Accelerator"
+  bio              : "Sry for the uncompleted website, Just started and working on it :) Thank you!"
   location         : "Seoul"
   email            :
   links:
