--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-  - title: "Apple"
-    url: https://apple.com/
-  - title: "Google"
-    url: https://google.com/ 
+  #- title: "Apple"
+  #  url: https://apple.com/
+  #- title: "Google"
+  #  url: https://google.com/ 
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
@@ -12,33 +12,33 @@ main:
   #   url: /sitemap/
 
 docs:
-  - title: HomePage
-    url: https://mean9park.github.io
+  #  - title: HomePage
+  #    url: https://mean9park.github.io
 
-  - title: AI Accelertator
-    children:
-    - title: "Research"
-    - title: "Paper Review"
-    - title: "Verilog"
-    - title: "CMOS VLSI"
+      #  - title: AI Accelertator
+    #    children:
+    #- title: "Research"
+    #- title: "Paper Review"
+    #- title: "Verilog"
+    #- title: "CMOS VLSI"
 
   - title: DRAM
     children:
-    - title: "Architecture"
+      #    - title: "Architecture"
     - title: "Operation"
-    - title: "Reliability"
+      #    - title: "Reliability"
   
-  - title: C++ / Algorithm
-    children:
-    - title: "Paper Review"
-    - title: "Research"
+      #  - title: C++ / Algorithm
+      #    children:
+      #    - title: "Paper Review"
+      #    - title: "Research"
   
-  - title: AI
-    children:
-    - title: "ViT"
-    - title: "Model Compression"
+      #  - title: AI
+      #    children:
+      #    - title: "ViT"
+      #    - title: "Model Compression"
 
-  - title: AI Mathmatics
-    children:
-    - title: "Linear Algebra"
-    - title: "Convex Optimization"
+      #  - title: AI Mathmatics
+      #    children:
+      #    - title: "Linear Algebra"
+      #    - title: "Convex Optimization"
