--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   name             : "AI Accelerator & Memory Architecture"
   avatar           : "/assets/images/crow.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Sry for the uncompleted website, Just started and working on it :) Thank you!"
-  location         : "Seoul"
+  location         : "Home Sweet Home"
   email            : 
   links:
     - label: "Email"
