sidebar link - DRAM, SVD

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-        #      url: "celion@yonsei.ac.kr"
+      url: "pian@yonsei.ac.kr"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
