sorting netwokr linking - from the track bar

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,4 +51,4 @@ docs:
   - title: Digital Logic Circuits
     children:
     - title: "Sorting Network"
-      url: https://mean9park.github.io/Sorting_network
+      url: https://mean9park.github.io/sorting_network
